fixed the gap from the scroll side

--- a/first-submit-to-the-project-main/css/style.css
+++ b/first-submit-to-the-project-main/css/style.css
@@ -273,6 +273,7 @@ ul {
 }
 
 li {
+    width: 350px;
     background-color: white;
     margin-top: 2px;
     border-radius: 5px;
